# serde-big-array-sgx

./: .drone.yml  Cargo.toml
sgx/serde-big-array-sgx-test/enclave/: Cargo.toml  Enclave.config.xml
sgx/serde-big-array-sgx-test/enclave/src/: lib.rs
sgx/serde-big-array-sgx-test/enclave/src/tests/: basic.rs  const.rs  const_expr.rs  const_generics.rs  mod.rs
