[package]
name = "serde-big-array"
version = "0.4.1"
authors = ["est31 <MTest31@outlook.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Big array helper for serde."
documentation = "https://docs.rs/serde-big-array"
repository = "https://github.com/est31/serde-big-array"
readme = "README.md"
edition = "2018"
exclude = ["/sgx/*"]

[dependencies]
serde = { rev = "sgx_1.1.4", git = "https://github.com/yunuseozer/serde-sgx" }
serde_derive = { rev = "sgx_1.1.4", git = "https://github.com/yunuseozer/serde-sgx" }

[dev-dependencies]
serde_json = "1.0"

[features]
const-generics = []
